--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
           <span id="logo-agro"> agro<span id="logo-search">Search</span> </span>
         </a>
         <ul class="menu">
-          <li><a href="#">Home</a></li>
+          <li><a href="./home.html">Home</a></li>
           <li><a href="#">Seeds</a></li>
           <li><a href="#">Fertilizers</a></li>
           <li><a href="#">Machines</a></li>
