--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           
         </div> -->
 
-        <img src="/images/logo.png" class="logo_container" alt="" />
+        <img src="./images/logo.png" class="logo_container" alt="" />
         <div class="title_container">
           <p class="title">Login to your Account</p>
           <span class="subtitle"
