add about relative link

--- a/services.html
+++ b/services.html
@@ -23,7 +23,7 @@
           <li><a href="#">Fertilizers</a></li>
           <li><a href="#">Machines</a></li>
           <li><a href="#">Services</a></li>
-          <li><a href="#">About Us</a></li>
+          <li><a href="./about.html">About Us</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </div>
