--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
           <li><a href="#">Seeds</a></li>
           <li><a href="#">Fertilizers</a></li>
           <li><a href="#">Machines</a></li>
-          <li><a href="services.html">Services</a></li>
+          <li><a href="./services.html">Services</a></li>
           <li><a href="./about.html">About Us</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
