--- a/services.html
+++ b/services.html
@@ -24,7 +24,7 @@
           <li><a href="#">Machines</a></li>
           <li><a href="#">Services</a></li>
           <li><a href="./about.html">About Us</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
     </nav>
