--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
           <li><a href="#">Machines</a></li>
           <li><a href="./services.html">Services</a></li>
           <li><a href="./about.html">About Us</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
     </nav>
