add contact section 1

--- a/contact.html
+++ b/contact.html
@@ -42,6 +42,7 @@
         method="https://docs.google.com/forms/d/e/1FAIpQLSfk8Hf1IVRGh4BZkaU4NLRUeLKvzgv9Y4fgz2BXXw9mrt9fYw/viewform?embedded=true"
       >
         <div class="form-group">
+          <h1>Contact Us</h1>
           <label for="name">Name</label>
           <input type="text" id="name" name="name" required />
         </div>
