Adding seed html

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./css/about.css" />
   </head>
   <body>
-    <nav>
+    <nav class="topbar">
       <div class="container">
         <a href="#" class="logo">
           <!-- <img src="/images/logo.png" alt="logo" id="logo"> -->
@@ -14,7 +14,7 @@
         </a>
         <ul class="menu">
           <li><a href="./home.html">Home</a></li>
-          <li><a href="#">Seeds</a></li>
+          <li><a href="./seed/seed.html">Seeds</a></li>
           <li><a href="#">Fertilizers</a></li>
           <li><a href="#">Machines</a></li>
           <li><a href="./services.html">Services</a></li>
