--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <nav>
+    <nav class="topbar">
       <div class="container">
         <a href="#" class="logo">
           <!-- <img src="/images/logo.png" alt="logo" id="logo"> -->
@@ -19,7 +19,7 @@
         </a>
         <ul class="menu">
           <li><a href="./home.html">Home</a></li>
-          <li><a href="#">Seeds</a></li>
+          <li><a href="./seed/seed.html">Seeds</a></li>
           <li><a href="#">Fertilizers</a></li>
           <li><a href="#">Machines</a></li>
           <li><a href="services.html">Services</a></li>
