fertlizer and machine section completed

--- a/about.html
+++ b/about.html
@@ -15,9 +15,9 @@
         <ul class="menu">
           <li><a href="./home.html">Home</a></li>
           <li><a href="./seed/seed.html">Seeds</a></li>
-          <li><a href="#">Fertilizers</a></li>
-          <li><a href="#">Machines</a></li>
-          <li><a href="./services.html">Services</a></li>
+          <li><a href="./fertlizers/fertlizers.html">Fertilizers</a></li>
+          <li><a href="./machines/machines.html">Machines</a></li>
+          <li><a href="./weatherApp/index.html">Services</a></li>
           <li><a href="./about.html">About Us</a></li>
           <li><a href="./contact.html">Contact</a></li>
         </ul>
@@ -36,17 +36,29 @@
       <div class="member">
         <img src="./member/IMG_3013.JPG" alt="Jane" />
         <h3>Janvi Bansal</h3>
-        <p></p>
+        <p>
+          Front-end developer with a passion for fine arts, finds joy in merging
+          my creative eye with technical expertise to build visually stunning
+          web applications
+        </p>
       </div>
       <div class="member">
         <img src="./member/JASSI.jpg" alt="Bob" />
         <h3>Jaspreet Singh</h3>
-        <p></p>
+        <p>
+          Front-end developer with a passion for fine arts, finds joy in merging
+          my creative eye with technical expertise to build visually stunning
+          web applications
+        </p>
       </div>
       <div class="member">
         <img src="./member/manish.jpg" alt="Sara" />
         <h3>Manish Swami</h3>
-        <p></p>
+        <p>
+          Front-end developer with a passion for fine arts, finds joy in merging
+          my creative eye with technical expertise to build visually stunning
+          web applications
+        </p>
       </div>
     </div>
 
