--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>agroSearch</title>
+    <title>Home-agroSearch</title>
     <link rel="stylesheet" href="/css/styles.css" />
     <!-- <link rel="stylesheet" href=""> -->
   </head>
@@ -20,11 +20,11 @@
         <ul class="menu">
           <li><a href="./home.html">Home</a></li>
           <li><a href="./seed/seed.html">Seeds</a></li>
-          <li><a href="#">Fertilizers</a></li>
-          <li><a href="#">Machines</a></li>
-          <li><a href="services.html">Services</a></li>
+          <li><a href="./fertlizers/fertlizers.html">Fertilizers</a></li>
+          <li><a href="./machines/machines.html">Machines</a></li>
+          <li><a href="./weatherApp/index.html">Services</a></li>
           <li><a href="./about.html">About Us</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./contact.html">Contact</a></li>
         </ul>
       </div>
     </nav>
