--- a/machines/machines.html
+++ b/machines/machines.html
@@ -135,10 +135,10 @@ div#illustration .illustration-animation
           <span id="logo-agro"> agro<span id="logo-search">Search</span> </span>
         </a>
         <ul class="menu">
-          <li><a href="./home.html">Home</a></li>
+          <li><a href="../home.html">Home</a></li>
           <li><a href="../seed/seed.html">Seeds</a></li>
-          <li><a href="#">Fertilizers</a></li>
-          <li><a href="#">Machines</a></li>
+          <li><a href="../fertlizers/fertlizers.html">Fertilizers</a></li>
+          <li><a href="../machines/machines.html">Machines</a></li>
           <li><a href="../weatherApp/index.html">Services</a></li>
           <li><a href="../about.html">About Us</a></li>
           <li><a href="../contact.html">Contact</a></li>
